# nanodns

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: codeql.yml  docker.yml  release.yml  test.yml
docs/: HA.md  USAGE.md
nanodns/: cache.py  cli.py  config.py  handler.py  mgmt.py  protocol.py  resolver.py  server.py
tests/: test_cache.py  test_config.py  test_ha.py  test_handler.py  test_integration.py  test_protocol.py  test_server.py  test_tinydns.py  test_unit.py  test_unit_server_cli.py
