[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanodns-server"
version = "0.1.0"
description = "A lightweight, JSON-configurable DNS server for internal networks"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "NanoDNS Contributors" }]
keywords = ["dns", "server", "networking", "internal", "intranet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Networking",
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
nanodns = "nanodns.cli:main"

[project.urls]
Homepage = "https://github.com/yourname/nanodns"
Issues = "https://github.com/yourname/nanodns/issues"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-dir]
"" = "."