[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanodns"
version = "0.2.8"
description = "A lightweight, JSON-configurable DNS server for internal networks"
readme = "README.md"
license = "MIT"
authors = [{ name = "NanoDNS Contributors" }]
keywords = ["dns", "server", "networking", "internal", "intranet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Networking",
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
nanodns = "nanodns.cli:main"

[project.urls]
Homepage = "https://github.com/iyuangang/nanodns"
Issues = "https://github.com/iyuangang/nanodns/issues"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: pure unit tests, no network",
    "integration: requires a live UDP server",
    "slow: tests that take more than 1 second",
]

[tool.coverage.run]
source = ["nanodns"]
omit = [
    "tests/*",
    "nanodns/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"
